<resources>
    <string name="app_name">Story</string>
    <string name="image_login">Image Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="input_email_and_password">Input email and password to login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="loading">Loading...</string>
    <string name="field_cannot_blank">Field cannot blank</string>
    <string name="your_story">Your Story</string>
    <string name="exit">exit</string>
    <string name="hello">Hello</string>
    <string name="add">add</string>
    <string name="add_image">Add Image</string>
    <string name="description_image">Description Image</string>
    <string name="add_story">Add Story</string>
    <string name="upload_image">Upload Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image">image</string>
    <string name="please_upload_image">Please upload image</string>
    <string name="posted_by">Posted by</string>
    <string name="description">Description</string>
    <string name="detail_story">Detail Story</string>
</resources>