<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhiteDark"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="20dp"
                android:text="@string/upload_image"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cameraTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:includeFontPadding="false"
                android:padding="20dp"
                android:text="@string/camera"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhiteDark" />

            <TextView
                android:id="@+id/galleryTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:includeFontPadding="false"
                android:padding="20dp"
                android:text="@string/gallery"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
